crates/lyra-tests/tests/snapshots/corpus__lrm__12__12.7.3__foreach_loop_statements__assign_to_loop_var.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic[23]] 10:6..10:6: cannot assign to foreach loop variable `i`
---
unit (0 diagnostics)
