crates/lyra-tests/tests/snapshots/corpus__lrm__12__12.7.3__foreach_loop_statements__var_same_name_as_array.snap
---
source: crates/lyra-tests/tests/corpus.rs
expression: ws.dump_diagnostics()
---
// file: main.sv (1 diagnostic)
  error[lyra.semantic[24]] 9:17..9:17: foreach loop variable has same name as iterated array `arr`
---
unit (0 diagnostics)
